src/test/ui/span/regions-close-over-borrowed-ref-in-obj.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/regions-close-over-borrowed-ref-in-obj.rs:12:27
   |
LL |         let ss: &isize = &id(1);
   |                           ^^^^^ creates a temporary which is freed while still in use
...
LL |     }
   |     - temporary value is freed at the end of this statement
LL | }
   | - borrow might be used here, when `blah` is dropped and runs the destructor for type `std::boxed::Box<dyn Foo>`
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
